# brain-games

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games_package/: __init__.py
brain_games_package/games/: brain-progression.py
brain_games_package/scripts/: main.py
