[project]
authors = [
    {name = "Siyovush", email = "shukurovsiyovush1@gmail.com"},
]
requires-python = "<4.0,>=3.13"
name = "brain-games-app"
version = "0.1.0"
description = "Example application"
readme = "README.md"

[dependency-groups]
dev = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games_package"]

[project.scripts]
brain-games-app = "brain_games_package.scripts.main:main"
